<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userClickListener"
            type="com.example.android.qstack.ui.users.UserClickItemListener" />
        <variable
            name="userItem"
            type="com.example.android.qstack.model.UserItem" />
        <import type="androidx.core.text.HtmlCompat" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()-> userClickListener.getUSerIdOnClick(userItem)}"
        android:layout_margin="8dp">

        <com.rishabhharit.roundedimageview.RoundedImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            app:bindImage="@{userItem}"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundedCorners="all"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_condensed_bold"
            android:maxLines="1"
            android:text="@{userItem.displayName}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:text="John Snow" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:text="@{userItem.location}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Reading, England" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="16sp"
            android:text="@string/user_status"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@{userItem.userType}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            tools:text="Registered" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/user_reputation"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@{String.valueOf(userItem.reputation)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            tools:text="10254796" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/about"
            android:textColor="@color/app_color"
            android:textSize="18sp"
            app:hideAbout="@{userItem}"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="16sp"
            android:text="@{userItem.aboutMe == null ? ` ` : HtmlCompat.fromHtml(userItem.aboutMe, HtmlCompat.FROM_HTML_MODE_COMPACT)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="@string/placeholder_about" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="#DFDEDE"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@{String.valueOf(userItem.questionCount) + ` ` + `questions`}"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:text="52 questions" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="#DFDEDE"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@{String.valueOf(userItem.answerCount) + ` ` + `answers`}"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            tools:text="13 answers" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="#DFDEDE"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@{String.valueOf(userItem.answerCount) + ` ` + `questions`}"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            tools:text="250125 views" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>